--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cookie": "^0.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
