--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2"
   },
